@@ -1509,8 +1509,6 @@ static int dvd_plugin_open (input_plugin_t *this_gen) {
     return 0;
   }
 
-  free (locator_orig);
-  
   dvdnav_get_title_string(this->dvdnav, &this->dvd_name);
   if(this->dvd_name)
     _x_meta_info_set(this->stream, XINE_META_INFO_TITLE, this->dvd_name);
@@ -1558,6 +1556,7 @@ static int dvd_plugin_open (input_plugin_t *this_gen) {
 	      "input_dvd: Title %i is out of range (1 to %i).\n", tt, titles);
       dvdnav_close(this->dvdnav);
       this->dvdnav = NULL;
+      free (locator_orig);
       return 0;
     }
 
@@ -1571,6 +1570,7 @@ static int dvd_plugin_open (input_plugin_t *this_gen) {
 		"input_dvd: Part %i is out of range (1 to %i).\n", pr, parts);
 	dvdnav_close(this->dvdnav);
 	this->dvdnav = NULL;
+	free (locator_orig);
 	return 0;
       }
     }
@@ -1605,7 +1605,8 @@ static int dvd_plugin_open (input_plugin_t *this_gen) {
   }
 
   update_title_display(this);
-  
+
+  free (locator_orig);
   return 1;
 }
 
