@@ -38,6 +38,12 @@ xine-lib (1.1.90) (Unreleased)
     Such elements are handled as if they were after the XML content for
     compatibility reasons, though they must appear before it.
 
+xine-lib (1.1.9) (unreleased)
+  * Fix dvd://.../title[.chapter] handling (somewhat broken in 1.1.8).
+  * Fix switching DVB subtitles channels.
+  * DVB sub: switch to dyn mem alloc and allow multiple CLUTs per page.
+  * Check if DVB sub PTS is reliable and show sub immediately if it's not.
+
 xine-lib (1.1.8)
   * Send a channel-changed event to the frontend when receiving the SYNC
     string from last.fm streaming server.
